Desktop app input forms

--- a/Build_IT_Infrastructure/Resources/ResourceDictionaries/ConvertersResourceDictionary.xaml
+++ b/Build_IT_Infrastructure/Resources/ResourceDictionaries/ConvertersResourceDictionary.xaml
@@ -5,4 +5,5 @@
 
     <conv:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
     <conv:BoolToVisibilityReverseConverter x:Key="BoolToVisibilityReverseConverter"/>
+    <conv:AllFalseToVisibilityConverter x:Key="AllFalseToVisibilityConverter"/>
 </ResourceDictionary>
