--- a/Build_IT_CalculationModule/Views/ScriptFormView.xaml
+++ b/Build_IT_CalculationModule/Views/ScriptFormView.xaml
@@ -6,6 +6,7 @@
              prism:ViewModelLocator.AutoWireViewModel="True"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Build_IT_CalculationModule.Views"
+             xmlns:valid="clr-namespace:Build_IT_CalculationModule.ValidationRules"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel>
@@ -13,15 +14,17 @@
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
                     <StackPanel>
-                        <TextBlock Text="{Binding ParameterName}"/>
-                        <TextBox Text="{Binding ParameterValue}"
-                                 Visibility="{Binding ContainsValueOptions, Converter={StaticResource BoolToVisibilityReverseConverter}}"/>
-                        <ComboBox ItemsSource="{Binding ValueOptions}"
-                                  SelectedValue="{Binding ParameterValue}"
-                                  SelectedValuePath="Value"
-                                  DisplayMemberPath="Name"
-                                  IsEditable="{Binding IsEditable}"
-                                  Visibility="{Binding ContainsValueOptions, Converter={StaticResource BoolToVisibilityConverter}}"/>
+                    <local:ParameterControlView DataContext="{Binding}"
+                                                Visibility="{Binding IsVisible, Converter={StaticResource BoolToVisibilityConverter}}"/>
+                        <TextBlock Text="{Binding ParameterResource.DataValidator}"
+                                 Foreground="Red">
+                            <TextBlock.Visibility>
+                                <MultiBinding Converter="{StaticResource AllFalseToVisibilityConverter}">
+                                    <Binding Path="IsValid"/>
+                                    <Binding Path="IsClean"/>
+                                </MultiBinding>
+                            </TextBlock.Visibility>
+                        </TextBlock>
                     </StackPanel>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
@@ -42,3 +45,4 @@
         </ItemsControl>
     </StackPanel>
 </UserControl>
+    
