--- a/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-calculator/script-calculator.component.html
+++ b/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-calculator/script-calculator.component.html
@@ -84,15 +84,6 @@
               (click)="calculate()">
         <span class="fa fa-calculator"></span> {{'scriptCalculator.Calculate' | translate}}
       </button>
-
-      <button mat-stroked-button
-              color="accent"
-              class="calculate"
-              type="button"
-              [disabled]="!isValid()"
-              (click)="calculateRange()">
-        <span class="fa fa-calculator"></span> {{'scriptCalculator.Calculate' | translate}}
-      </button>
     </div>
 
     <div *ngIf="isCalculating"
@@ -119,4 +110,5 @@
     </div>
   </div>
 
-<chart-result [arrayParameters]="arrayParameters"></chart-result>
+<chart-result [parameters]="parameters"
+              [script]="script"></chart-result>
