--- a/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-calculator/parameter-results/parameter-result/parameter-result.component.scss
+++ b/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-calculator/parameter-results/parameter-result/parameter-result.component.scss
@@ -1,4 +1,4 @@
-﻿.parameter-result-header{
+.parameter-result-header{
     position:relative;
     top:0.4em;
 }
@@ -12,4 +12,12 @@
     border-top-style: dotted;
     border-color: rgb(156,39,176);
     border-width: 3px;
+}
+
+.valid{
+  color: rgba(0,255,0,0.3);
+}
+
+.notValid {
+  color: rgba(255,0,0,0.3);
 }
