Chart in the middle and get rid of rounding in frontend (need to be added but with option to change the numbers)

--- a/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-calculator/parameter-results/parameter-result/parameter-result.component.html
+++ b/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-calculator/parameter-results/parameter-result/parameter-result.component.html
@@ -9,7 +9,7 @@
                 <p class="font-weight-bold mb-0 parameter-result-value">
                     <span *ngIf="parameter.valueType == valueTypes.number; else textValue"
                           [ngClass]="parameter.name">
-                        {{parameter.value | toNumber | number:'1.0-3'}}
+                        {{parameter.value | toNumber}}
                     </span>
                     <ng-template #textValue>
                         <span [ngClass]="parameter.name">{{parameter.value}}</span>
