--- a/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-calculator/script-calculator.component.html
+++ b/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-calculator/script-calculator.component.html
@@ -110,5 +110,7 @@
     </div>
   </div>
 
+<hr/>
 <chart-result [parameters]="parameters"
-              [script]="script"></chart-result>
+              [script]="script"
+              class="text-center"></chart-result>
