--- a/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-calculator/parameter-results/chart-results/chart-result.component.scss
+++ b/Build_IT_Web/ClientApp/src/app/modules/script-interpreter/components/script-calculator/parameter-results/chart-results/chart-result.component.scss
@@ -1,4 +1,8 @@
-.chart{
- display:block;
- width:50%;
+.chart {
+  display: block;
+  width: 50%;
+  @media (max-width: 600px) {
+    width: 100%;
+  }
+  margin: auto;
 }
